# SwiftMath

./: .gitignore  CMakeLists.txt  Package.swift  README.md
Sources/: Angle.swift  Frustum.swift  Matrix3x3+nosimd.swift  Matrix3x3+simd.swift  Matrix3x3.swift  Matrix4x4+nosimd.swift  Matrix4x4+simd.swift  Matrix4x4.swift  Primitives.swift  Quaternion.swift  Swizzle.swift  Vector.swift  Vector2+nosimd.swift  Vector2+simd.swift  Vector2.swift  Vector3+nosimd.swift  Vector3+simd.swift  Vector3.swift  Vector4+nosimd.swift  Vector4+simd.swift  Vector4.swift  functions.swift  platform.swift
Sources/SwiftMath/: AffineMatrix.swift  AffineMatrix2D.swift  Angle.swift  CMakeLists.txt  Codable.swift  Color.swift  Colour.swift  DisplayTransform.swift  Frustum.swift  Functions.swift  Matrix2x2+nosimd.swift  Matrix2x2+simd.swift  Matrix2x2.swift  Matrix3x3+nosimd.swift  Matrix3x3+simd.swift  Matrix3x3.swift  Matrix4x4+Extensions.swift  Matrix4x4+nosimd.swift  Matrix4x4+simd.swift  Matrix4x4.swift  PackedVector3.swift  Packing.swift  Primitives.swift  Quaternion.swift  Rect.swift  SimdVector.swift  Splines.swift  String+Math.swift  Vector.swift  Vector2.swift  Vector3.swift  Vector4.swift  easing.swift  functions.swift  random.swift  utils.swift
Tests/SwiftMathTests/: MatrixTests.swift
